--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "google-map-react": "^2.2.1",
+    "kute.js": "^2.2.4",
     "next": "13.4.9",
     "postcss": "8.4.26",
     "react": "18.2.0",
