--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@types/react-lazy-load-image-component": "^1.5.3",
     "@types/three": "^0.154.0",
     "autoprefixer": "10.4.14",
     "clsx": "^2.0.0",
@@ -25,6 +26,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-lazy-load-image-component": "^1.6.0",
     "swiper": "^10.1.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
